--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
 					<groupId>com.sun</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency><!-- <dependency> <groupId>common</groupId> <artifactId>hessian</artifactId> 
+		</dependency>
+		<!-- <dependency> <groupId>common</groupId> <artifactId>hessian</artifactId> 
 			<version>4.0.37</version> </dependency> -->
 		<dependency>
 			<groupId>com.caucho</groupId>
