--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<name>common_util</name>
 	<version>1.0</version>
 	<description>专门用于数据库操作的通用接口及实现</description>
-	<dependencies>	
+	<dependencies>
 		<dependency>
 
 			<groupId>net.sf.json-lib</groupId>
@@ -25,6 +25,18 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.3.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.6.2.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -137,6 +149,17 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>20041127.091804</version>
+		</dependency>
+		<dependency>
+			<groupId>com.aliyun.mns</groupId>
+			<artifactId>aliyun-sdk-mns</artifactId>
+			<version>1.1.8.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.aliyun.openservices</groupId>
+			<artifactId>ons-client</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 	</dependencies>
 	<build>
