--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
 	<version>1.0</version>
 	<description>专门用于数据库操作的通用接口及实现</description>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 		<dependency>
 
 			<groupId>net.sf.json-lib</groupId>
@@ -108,6 +114,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
+			<version>3.0.6.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
 			<version>3.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
